# SparseVoxelOctree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shaders_gen.cpp
dep/: CMakeLists.txt  binary_semaphore.hpp  stb_image.cpp  stb_image.h  tiny_obj_loader.cpp  tiny_obj_loader.h  tinyexr.h  tinyfiledialogs.c  tinyfiledialogs.h  vk_mem_alloc.h  vk_queue_selector.c  vk_queue_selector.h
dep/MyVK/: CMakeLists.txt  README.md
dep/MyVK/dep/: CMakeLists.txt
dep/MyVK/dep/glfw/: CMakeLists.txt
dep/MyVK/dep/imgui/: imgui_draw.cpp
dep/MyVK/dep/vma/: vk_mem_alloc.h
dep/MyVK/include/myvk/: Base.hpp  Buffer.hpp  BufferBase.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipeline.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  DeviceObjectBase.hpp  Fence.hpp  FrameManager.hpp  Framebuffer.hpp  FramebufferBase.hpp  GLFWHelper.hpp  GraphicsPipeline.hpp  ImGuiHelper.hpp  ImGuiRenderer.hpp  Image.hpp  ImageBase.hpp  ImageView.hpp  ImagelessFramebuffer.hpp  Instance.hpp  ObjectTracker.hpp  PhysicalDevice.hpp  PipelineBase.hpp  PipelineLayout.hpp  Ptr.hpp  QueryPool.hpp  Queue.hpp  QueueSelector.hpp  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp  SwapchainImage.hpp
dep/MyVK/include/myvk_rg/: RenderGraph.hpp
dep/MyVK/src/: Buffer.cpp  BufferBase.cpp  CommandBuffer.cpp  CommandPool.cpp  ComputePipeline.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  FramebufferBase.cpp  GraphicsPipeline.cpp  Image.cpp  ImageBase.cpp  ImageView.cpp  ImagelessFramebuffer.cpp  Instance.cpp  ObjectTracker.cpp  PhysicalDevice.cpp  PipelineBase.cpp  PipelineLayout.cpp  QueryPool.cpp  Queue.cpp  QueueSelector.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp
dep/MyVK/src/glfw/: FrameManager.cpp  ImageView.cpp  Instance.cpp  PhysicalDevice.cpp  QueueSelector.cpp  Surface.cpp  Swapchain.cpp  SwapchainImage.cpp
dep/MyVK/src/imgui/: ImGuiHelper.cpp  ImGuiRenderer.cpp
dep/MyVK/src/rg/: Bitset.hpp  RenderGraph.cpp  RenderGraphAllocator.cpp  RenderGraphAllocator.hpp  RenderGraphDescriptor.cpp  RenderGraphDescriptor.hpp  RenderGraphExecutor.cpp  RenderGraphExecutor.hpp  RenderGraphLFInit.cpp  RenderGraphLFInit.hpp  RenderGraphResolver.cpp  RenderGraphResolver.hpp  RenderGraphScheduler.cpp  RenderGraphScheduler.hpp  VkHelper.hpp
dep/font-awesome/: fa_solid_900.inl  font_awesome.inl
dep/gl3w/include/GL/: gl3w.h  glcorearb.h
dep/gl3w/include/KHR/: khrplatform.h
dep/gl3w/src/: gl3w.c
dep/glfw/: CMakeLists.txt
dep/glfw/docs/html/: bug.html  build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_5dcdc111a8cc46b7ba079b758fca78dc.html  dir_8e024bada8281d1e35d4f557736ec981.html  dir_c41baed9597671ff1a15b37f0402add0.html  dir_cadcc4232541fc0fdfafe7052b4d94e2.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  (+31 more)
dep/imgui/: font.inl  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
dep/mygl3/: atomiccounter.hpp  buffer.hpp  flags.hpp  framebuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp
dep/mygl3/utils/: framerate.hpp
dep/myvk/: Buffer.cpp  Buffer.hpp  BufferBase.cpp  BufferBase.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  DeviceCreateInfo.cpp  DeviceCreateInfo.hpp  DeviceObjectBase.hpp  Fence.hpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageBase.cpp  ImageBase.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  ObjectTracker.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineBase.hpp  PipelineLayout.hpp  QueryPool.cpp  QueryPool.hpp  Queue.cpp  Queue.hpp  (+10 more)
dep/spdlog/: CMakeLists.txt
shader/: CMakeLists.txt  camera.glsl  diffuse.glsl  environment_map.glsl  mis.glsl  octree.glsl  octree_alloc_node.comp  octree_init_node.comp  octree_modify_arg.comp  octree_tag_node.comp  octree_tracer.frag  octree_tracer_beam.frag  path_tracer.comp  path_tracer_viewer_gen.frag  path_tracer_viewer_main.frag  path_tracer_viewer_main.vert  sobol.comp  sobol.glsl  util.glsl  voxelizer.frag  voxelizer.geom  voxelizer.vert  voxelizer_conservative.frag  voxelizer_conservative.geom
shader/include/spirv/: octree_alloc_node.comp.u32  octree_init_node.comp.u32  octree_modify_arg.comp.u32  octree_tag_node.comp.u32  octree_tracer.frag.u32  octree_tracer_beam.frag.u32  path_tracer.comp.u32  path_tracer_viewer_gen.frag.u32  path_tracer_viewer_main.frag.u32  path_tracer_viewer_main.vert.u32  quad.vert.u32  sobol.comp.u32  voxelizer.frag.u32  voxelizer.geom.u32  voxelizer.vert.u32  voxelizer_conservative.frag.u32  voxelizer_conservative.geom.u32
shaders/: CMakeLists.txt  octree_alloc_node.comp  octree_alloc_node_comp.spv  octree_alloc_node_comp.u32  octree_init_node.comp  octree_init_node_comp.spv  octree_init_node_comp.u32  octree_modify_arg.comp  octree_modify_arg_comp.spv  octree_modify_arg_comp.u32  octree_tag_node.comp  octree_tag_node_comp.spv  octree_tag_node_comp.u32  octree_tracer.frag  octree_tracer_beam.frag  octree_tracer_beam_frag.spv  octree_tracer_beam_frag.u32  octree_tracer_frag.spv  octree_tracer_frag.u32  path_tracer.comp  path_tracer_viewer.frag  path_tracer_viewer_main.frag  path_tracer_viewer_main.vert  pathtracer.frag  quad.vert  quad_dir.vert  quad_sampler.frag  quad_vert.spv  quad_vert.u32  sobol.comp  tri.frag  tri.vert  tri_frag.spv  tri_vert.spv  view.frag  view.vert  voxelizer.frag  voxelizer.geom  voxelizer.vert  voxelizer_count.frag  (+6 more)
shaders/include/spirv/: octree_init_node.comp.u32  octree_modify_arg.comp.u32
(+165 files in other folders)
